--- a/Logica/Proyecto_log.tex
+++ b/Logica/Proyecto_log.tex
@@ -14,6 +14,8 @@
 \usepackage{biblatex}
 \addbibresource{refs.bib}
 \usepackage{csquotes}
+\usepackage{enumitem}
+\usepackage{adjustbox}
 
 % Fuente
 \usepackage{lmodern}
@@ -29,7 +31,7 @@
     headheight = 72pt
 }
 \newcommand{\logo}{"C:/Users/usuario/OneDrive/Documentos/U/logo-eci.png"}
-\renewcommand{\author}{David Gómez, Daniel Pérez, Laura Rincón, Juanita Rubiano}
+\renewcommand{\author}{David Gómez, Daniel Pérez, Laura Rincón}
 \renewcommand{\title}{Funciones lógicas}
 
 \pagestyle{fancy}
@@ -42,7 +44,6 @@
 
 \hyphenpenalty = 10000
 
-\setlength{\parindent}{0pt}
 
 \newcommand{\sect}[1]{\section*{#1} \addcontentsline{toc}{section}{#1}}
 \newcommand{\subsect}[1]{\subsection*{#1} \addcontentsline{toc}{subsection}{#1}}
@@ -91,7 +92,7 @@
 
         \includegraphics[width = .8\textwidth]{\logo}
 
-        \vspace{2cm}
+        \vfill
 
         {\Large Estudiante de Matemáticas\\[5pt]
 
