--- a/Logica/func_bool.tex
+++ b/Logica/func_bool.tex
@@ -1,13 +1,13 @@
 \sect{Funciones booleanas} \label{func_bool}
 
-Las funciones booleanas son una forma de entender los conectores lógicos, y los valores que toman. La idea en este documento es poder salir del lenguaje de la lógica, y poder manejar dichas funciones como si se tratara de números, de forma que llegar a un resultado sea muy lineal.
-
-Las definiciones de estas funciones, como se expresa en el libro \emph{Lógica para Informática y Matemáticas} \cite{rocha-2022}
+Las funciones booleanas son una forma de entender los conectores lógicos, y los valores que toman. La idea en este documento es poder salir del lenguaje de la lógica, y poder manejar dichas funciones como si se tratara de números, de forma que llegar a un resultado sea muy lineal. \\Las definiciones de estas funciones, como se expresa en el
+libro \emph{Lógica para Informática y Matemáticas} \cite{rocha-2022}
 
 \begin{proofbox}{Funciones booleanas}
-    Se toma $\mathbb{B} = \{\texttt{T}, \texttt{F}\}$ el conjunto de valores de verdad, donde $\texttt{T}$ corresponde a \emph{verdadero} y $\texttt{F}$ corresponde a \emph{falso}.
-
-    Y ya que los conectivos lógicos se interpretan dependiendo de el valor que tomen las variables sobre las que se opera, es posible definir funciones para cada conectivo de la siguiente manera:
+    Se toma $\mathbb{B} = \{\texttt{T}, \texttt{F}\}$ el conjunto de valores de verdad,
+    donde $\texttt{T}$ corresponde a \emph{verdadero} y $\texttt{F}$ corresponde a \emph{falso}.
+    Y ya que los conectivos lógicos se interpretan dependiendo de el valor que tomen las variables
+    sobre las que se opera, es posible definir funciones para cada conectivo de la siguiente manera:
     \[
         \begin{derivation}
             \hbool*{\textit{true}}{}{} = \texttt{T}\\
