--- a/Logica/func_log.tex
+++ b/Logica/func_log.tex
@@ -1,9 +1,9 @@
 \sect{Nuestras funciones}
 
-Como se mencionó, se quiere dar una extensión de la lógica que permita el uso de operaciones aritméticas en la misma.
-
-De forma análoga a las  \hyperref[func_bool]{funciones booleanas}, se toma un conjunto sobre el que se emplean estas funciones: $\mathbb{V} = \{0, 1\}$ , en donde $0$ corresponde al valor \emph{falso} y $1$ al de \emph{verdadero}
-
+Como se mencionó, se quiere dar una extensión de la lógica que permita el uso de operaciones
+aritméticas en la misma. De forma análoga a las  \hyperref[func_bool]{funciones booleanas},
+se toma un conjunto sobre el que se emplean estas funciones: $\mathbb{V} = \{0, 1\}$ ,
+en donde $0$ corresponde al valor \emph{falso} y $1$ al de \emph{verdadero}\\
 A partir de esto hacemos la siguiente analogía para entender las funciones que debemos encontrar:
 
 \begin{proofbox}{Conectores lógicos a funciones}
@@ -39,14 +39,19 @@ A partir de esto hacemos la siguiente analogía para entender las funciones que 
     \end{center}
 \end{proofbox}
 
-Ahora, falta definir cada una de estas funciones. La forma en la que se definen, aprovechando que $\mathbb{V} \subseteq \mathbb{N}$, será obteniendo sucesiones a partir de tomar una de las variables como constante en ambos valores posibles. Dado que los posibles valores son únicamente dos, se puede asumir dichas sucesiones como aritméticas, lo que hace la obtención de su descripción bastante sencilla.
+Ahora, falta definir cada una de estas funciones. La forma en la que se definen, aprovechando que
+$\mathbb{V} \subseteq \mathbb{N}$, será obteniendo sucesiones a partir de tomar una de las 
+variables como constante en ambos valores posibles. Dado que los posibles valores son únicamente
+dos, se puede asumir dichas sucesiones como aritméticas, lo que hace la obtención de su descripción
+bastante sencilla.
 
-Cabe aclarar, que el resultado previo a obtener la descripción aritmética de cada función está dado por el comportamiento de la función booleana correspondiente. Como ejemplo, la negación: 
+Cabe aclarar, que el resultado previo a obtener la descripción aritmética de cada función está dado
+por el comportamiento de la función booleana correspondiente. Como ejemplo, la negación: 
 \[\hbool*{\neg}{T}{} = \texttt{F} \ \flechita\  N(1) = 0\]
 
 \begin{proofbox}{Obtención de las funciones} \label{obtencion_func}
-    \begin{itemize}
-        \item[(i)] $N(p)$
+    \begin{enumerate}[label=(\roman*)]
+        \item $N(p)$
         
         Esta función, se comporta de la siguiente manera:
         \[
@@ -62,7 +67,7 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
             \end{derivation}
         \]
 
-        \item[(ii)] $I(p, q)$
+        \item $I(p, q)$
         
         De igual manera:
         \[
@@ -79,7 +84,7 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
         \]
 
         Procediendo de igual manera con las demás funciones\dots
-        \item[(iii)] $C(p, q)$
+        \item $C(p, q)$
         
         \[
             \begin{derivation}<1>
@@ -94,7 +99,7 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
             \end{derivation}
         \]
 
-        \item[(iv)] $\&(p, q)$
+        \item $\&(p, q)$
         \[
             \begin{derivation}<1>
                     & \left\{
@@ -110,7 +115,7 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
 
         \tcbbreak
 
-        \item[(v)] $O(p, q)$
+        \item $O(p, q)$
         \[
             \begin{derivation}<1>
                     & \left\{
@@ -124,7 +129,7 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
             \end{derivation}
         \]
 
-        \item[(vi)] $E(p, q)$
+        \item $E(p, q)$
         \[
             \begin{derivation}<1>
                     & \left\{
@@ -140,7 +145,7 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
             \end{derivation}
         \]
 
-        \item[(vii)] $D(p, q)$
+        \item $D(p, q)$
         \[
             \begin{derivation}<1>
                     & \left\{
@@ -155,25 +160,35 @@ Cabe aclarar, que el resultado previo a obtener la descripción aritmética de c
                     & D(p, q) = p(1 - q) + q(1 - p)
             \end{derivation}
         \]
+        \end{enumerate}
+    \end{proofbox}
 
-        Por otra parte, están los cuantificadores, que se pueden expresar en términos de dos conectores: el cuantificador universal, es una forma de expresar una conjunción de varios términos; y el cuantificador existencial, es una forma de expresar una disyunción de varios términos.
-
-        \item[(viii)] $(\forall x \sthat r(x) : p(x))$\\
-        Al ser una conjunción de muchos términos, usando la función para la conjunción, se puede ver que se puede expresar como un productorio. Adoptaremos la siguiente notación:
+        Por otra parte, están los cuantificadores, que se pueden expresar en términos de dos
+        conectores: el cuantificador universal, es una forma de expresar una conjunción de varios
+        términos; y el cuantificador existencial, es una forma de expresar una disyunción de varios
+        términos.
+    \begin{enumerate}[label=(\roman*)]
+        \setcounter{enumi}{7}
+        \item $(\forall x \sthat r(x) : p(x))$\\
+        Al ser una conjunción de muchos términos, usando la función para la conjunción, se puede
+        ver que se puede expresar como un productorio. Adoptaremos la siguiente notación:
         
         \[(\forall x \sthat r(x) : p(x)) \ \flechita\  \prod_{x\sthat r(x)} p(x)\]
 
-        \item[(ix)] $(\exists x \sthat r(x) : p(x))$\\
-        Debido a la definición de la conjunción como función, tomamos la siguiente equivalencia, y se define el cuantificador existencial como el universal.
+        \item $(\exists x \sthat r(x) : p(x))$\\
+        Debido a la definición de la conjunción como función, tomamos la siguiente equivalencia,
+        y se define el cuantificador existencial como el universal.
 
         \[(\exists x \sthat r(x) : p(x)) \equiv \neg (\forall x \sthat r(x) : \neg p(x))\ \flechita \ 1 - \prod_{x\sthat r(x)} (1 - p(x))\]
-    \end{itemize}
+    \end{enumerate}
 
-    La propiedad, la cual llamaremos ``Propiedad fundamental'', más importante a tener en cuenta es la siguiente:
+    La propiedad, la cual llamaremos ``Propiedad fundamental'', más importante a tener en cuenta es
+    la siguiente:
     \[p\in \mathbb{V} \To p^n = p\]
 
-    Esto debido a que los valores de dicho conjunto, al elevarse a cualquier potencia no cambian su resultado. Y por otro lado, este resultado se obtiene de la propiedad del conector $\land$: idempotencia.
-\end{proofbox}
+    Esto debido a que los valores de dicho conjunto, al elevarse a cualquier potencia no cambian su 
+    resultado. Y por otro lado, este resultado se obtiene de la propiedad del conector $\land$: 
+    idempotencia.
 \vspace*{-.1cm}
 Un ejemplo del uso de estas funciones sería evaluar la siguiente proposición:
 
