--- a/Sucesiones/formula_algor.tex
+++ b/Sucesiones/formula_algor.tex
@@ -1,18 +1,19 @@
 \subsect{Obtención general}
 
-Suponga ahora la siguiente sucesión $S$ y sus índices $I$:
-\begin{align*}
-    S &= \langle x_0, x_1, x_2, \dots , x_n\rangle\\
-    I &= \langle 0, 1, 2, \dots , n \rangle
-\end{align*}
+Suponga ahora la siguiente sucesión $S$
+\[
+    S = \langle x_0, x_1, x_2, \dots , x_n\rangle    
+\]
 
-El objetivo es obtener el término general de $S$ con índices $I$ .
-
+El objetivo es obtener el término general de $S$.
 Procedemos de igual forma que en el ejemplo:
 
 \[a_0(n) = x_0\]
 
-Se tomará la Notación $y_k$ para representar el coeficiente de la iteración $k$ al resolver la ecuación que se mostró en el ejemplo, evitando hacer mención de la suposición de dicho $y$ en cada procedimiento.
+Se tomará la Notación $y_k$ para representar el coeficiente
+de la iteración $k$ al resolver la\\ ecuación que se mostró en el
+ejemplo evitando hacer mención de la suposición de dicho $y$ en cada
+procedimiento.
 
 \begin{equation*}
     \left\{
