--- a/Sucesiones/Intro.tex
+++ b/Sucesiones/Intro.tex
@@ -1,8 +1,14 @@
 \sect{Introducción}
 
-Para la extrapolación polinómica, se toma en cuenta como variable tanto el
-dominio como el rango del polinomio en cuestión. Esto es, los algoritmos
-están diseñados para poder usar un conjunto arbitrario de parejas ordenadas.
+Una extrapolación polinómica es una forma de estimar datos fuera de un
+intervalo dado. La idea es muy similar a la interpolación, sin embargo,
+la interpolación tiene como objetivo ver datos que se encuentren dentro
+del intervalo. Para fines de este artículo, esa diferencia no es realmente
+notoria. El objetivo de ambos es obtener una expresión polinómica la cual
+permita trabajar con un conjunto de datos dados.\\
+Por lo general, se toman como variables tanto el dominio como el rango del
+polinomio en cuestión. Esto es, los algoritmos están diseñados para poder
+usar un conjunto arbitrario de parejas ordenadas.
 Sin embargo, en muchos casos se necesita que el dominio esté contenido con
 los naturales, o se obtenga linealmente de los naturales
 (ej.: $\{0.1,\ 0.2,\ 0.3,\ \dots\}$). 
