--- a/Sucesiones/Intro.tex
+++ b/Sucesiones/Intro.tex
@@ -9,13 +9,13 @@ permita trabajar con un conjunto de datos dados.\\
 Por lo general, se toman como variables tanto el dominio como el rango del
 polinomio en cuestión. Esto es, los algoritmos están diseñados para poder
 usar un conjunto arbitrario de parejas ordenadas.
-Sin embargo, en muchos casos se necesita que el dominio esté contenido con
+Sin embargo, en muchos casos se necesita que el dominio esté contenido en
 los naturales, o se obtenga linealmente de los naturales
 (ej.: $\{0.1,\ 0.2,\ 0.3,\ \dots\}$). 
 
 En el presente artículo, se pretende proponer un algoritmo para extrapolar
 conjuntos de puntos cuya primera coordenada esté en un conjunto como los
-mencionados al final del anterior párrafo. Inicialmente, se plantea una
+mencionados. Inicialmente, se plantea una
 función recursiva para posteriormente, presentar una solución directa (sin recursión).\\
 Este algoritmo, con una pequeña variación, fue presentado de manera informal
 por el matemático Eduardo Sáenz de Cabezón, a modo de divulgación.
